# BSP-Entity-Manager

./: CMakeLists.txt  CMakePresets.json  README.md
src/: BSP.cpp  BSP.h  Utility.h  main.cpp
